<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.adlabsbd.anup.personal_library_tracker.MainActivity"
    android:orientation="vertical"
    android:background="#EEE3B0"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="30dp"

        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/btn_click"
            android:text="@string/addBook"
            android:textColor="@android:color/black"
            android:background="@android:color/transparent"
            android:textAppearance="?android:textAppearanceLarge"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/btn_click"
            android:text="@string/bookList"
            android:textColor="@android:color/black"
            android:background="@android:color/transparent"
            android:layout_marginLeft="20dp"
            android:onClick="goToBookList"
            android:textAppearance="?android:textAppearanceLarge"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="30dp"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/btn_click"
            android:text="@string/borrowBook"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/black"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/btn_click"
            android:text="@string/returnBook"
            android:textColor="@android:color/black"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:textAppearance="?android:textAppearanceLarge"
            />



    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:gravity="center"
            android:textColor="#542003"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>




</LinearLayout>
